--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     </nav>
 
     <div class="bottombar-toggle">
-      <span></span>
-      <span></span>
+      <span class="ms-rounded">menu</span>
     </div>
   </header>
 
@@ -79,10 +78,17 @@
   </nav>
 
   <main>
-    <div class="hero-image">
-      <div id="startReadingBtn">
-        <span class="ms-rounded">book_5</span>
-        <span>Start reading</span>
+    <div class="hero">
+      <div class="overlay">
+        <span class="title">Your Decentralized News Feed for Web3 & Crypto</span>
+        <span class="body-content">
+          Get the latest updates on blockchain stuff — everything crypto, web3, NFTs, and more
+        </span>
+        
+        <div id="ctaBtn">
+          <span class="ms-rounded">book_5</span>
+          <span>Start reading</span>
+        </div>
       </div>
     </div>
   </main>
