--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="site-id">
-      <img src="" alt="">
+      <img src="img/CT-logo.png" alt="CT-logo">
       <span>CT</span>
     </div>
 
