--- a/index.html
+++ b/index.html
@@ -18,26 +18,25 @@
   <header>
     <div class="site-id">
       <img src="img/CT-logo.png" alt="CT-logo">
-      <span>CT</span>
     </div>
 
-    <nav class="bottombar lg-xl-xxl" hidden>
-      <div class="bottombar-link">
+    <nav class="top-nav lg-xl-xxl" hidden>
+      <div class="top-nav-link">
         <span class="ms-rounded"></span>
         <span>Settings</span>
       </div>
 
-      <div class="bottombar-link">
+      <div class="top-nav-link">
         <span class="ms-rounded"></span>
         <span>Account</span>
       </div>
 
-      <div class="bottombar-link">
+      <div class="top-nav-link">
         <span class="ms-rounded"></span>
         <span>Help</span>
       </div>
 
-      <div class="bottombar-link">
+      <div class="top-nav-link">
         <span class="ms-rounded"></span>
         <span>Sign Out</span>
       </div>
@@ -71,7 +70,7 @@
       <span>Help</span>
     </div>
 
-    <div class="bottombar-link">
+    <div class="bottombar-link" id="signOutBtn">
       <span class="ms-rounded">logout</span>
       <span>Sign Out</span>
     </div>
