--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="754387532769-2vrnrga8vunfjk7hbislp168u36hjsr2.apps.googleusercontent.com">
-  <title>CT - All your reads in one place</title>
+  <title>Convo - Your decentralized news feed</title>
   <!-- stylesheets -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="icons/icon.css" type="text/css" media="all" />
