--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <header>
     <div class="site-id">
       <img src="img/CT-logo.png" alt="CT-logo">
+      <span class="name"></span>
     </div>
 
     <nav class="top-nav lg-xl-xxl" hidden>
