--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="site-id">
-      <img src="img/c1onvo-logo.png" alt="CT-logo">
+      <img src="img/Convo-logo.png" alt="CT-logo">
       <span class="name"></span>
     </div>
 
