--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="google-signin-client_id" content="754387532769-2vrnrga8vunfjk7hbislp168u36hjsr2.apps.googleusercontent.com">
   <title>Convo - Your decentralized news feed</title>
   <!-- stylesheets -->
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/Convo-favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="icons/icon.css" type="text/css" media="all" />
   <link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
   <!-- scripts --->
