--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="icons/icon.css" type="text/css" media="all" />
   <link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
   <!-- scripts --->
-  <script src="https://apis.google.com/js/api:client.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!--script src="https://apis.google.com/js/api:client.js"></script-->
 </head>
 
 <body>
@@ -92,8 +93,7 @@
       </div>
     </div>
   </main>
-
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  
   <script src="js/main.js"></script>
 </body>
 
