--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
   <!-- scripts --->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <!--script src="https://apis.google.com/js/api:client.js"></script-->
+  <script src="https://apis.google.com/js/api:client.js"></script>
 </head>
 
 <body>
