--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
   <header>
     <div class="site-id">
       <img src="img/Convo-logo.png" alt="CT-logo">
-      <span id="name"></span>
+      <span id="gUserName"></span>
     </div>
 
     <nav class="top-nav lg-xl-xxl" hidden>
-      <div class="top-nav-link">
+      <div class="top-nav-link settingsBtn">
         <span class="ms-rounded"></span>
         <span>Settings</span>
       </div>
 
-      <div class="top-nav-link">
+      <div class="top-nav-link accountBtn">
         <span class="ms-rounded"></span>
         <span>Account</span>
       </div>
 
-      <div class="top-nav-link">
+      <div class="top-nav-link helpBtn">
         <span class="ms-rounded"></span>
         <span>Help</span>
       </div>
 
-      <div class="top-nav-link">
+      <div class="top-nav-link signOutBtn">
         <span class="ms-rounded"></span>
         <span>Sign Out</span>
       </div>
@@ -57,28 +57,32 @@
       </div>
     </div>
 
-    <div class="bottombar-link">
+    <div class="bottombar-link settingsBtn">
       <span class="ms-rounded">settings</span>
       <span>Settings</span>
     </div>
 
-    <div class="bottombar-link">
+    <div class="bottombar-link accountBtn">
       <span class="ms-rounded">account_circle</span>
       <span>Account</span>
     </div>
 
-    <div class="bottombar-link">
+    <div class="bottombar-link helpBtn">
       <span class="ms-rounded">help</span>
       <span>Help</span>
     </div>
 
-    <div class="bottombar-link" id="signOutBtn">
+    <div class="bottombar-link signOutBtn">
       <span class="ms-rounded">logout</span>
       <span>Sign Out</span>
     </div>
   </nav>
 
   <main>
+    <div class="popup">
+      
+    </div>
+    
     <div class="hero">
       <div class="overlay">
         <span class="title">Your Decentralized News Feed for Web3 & Crypto</span>
