--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <header>
     <div class="site-id">
-      <img src="img/Convo-logo.png" alt="CT-logo">
-      <span id="gUserName"></span>
+      <img src="img/Convo-logo.png" alt="Convo-logo">
+      <span id="userName"></span>
     </div>
 
     <nav class="top-nav lg-xl-xxl" hidden>
