--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
   </nav>
 
   <main>
-    <div class="popup">
-      
-    </div>
+    <div class="popup"></div>
     
     <div class="hero">
       <div class="overlay">
