--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <div class="site-id">
       <img src="img/Convo-logo.png" alt="Convo-logo">
-      <span id="name"></span>
+      <span id="name" style="background: red">user</span>
     </div>
 
     <nav class="top-nav lg-xl-xxl" hidden>
