--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
       );
     }
 
-    startApp();
-
     function signOut() {
       let auth2 = gapi.auth2.getAuthInstance();
       auth2.signOut().then(function() {
-        console.log('User signed out.');
+        alert.log('User signed out.');
         document.querySelector("#name").innerText = "--";
       });
     }
+    
+    startApp();
   </script>
   <script src="js/main.js"></script>
 </body>
