--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="icons/icon.css" type="text/css" media="all" />
   <link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
   <!-- scripts -->
-  <script type="module" src="js/signup.js" defer></script>
+  <script type="module" src="js/auth/signup.js" defer></script>
+  <script type="module" src="js/auth/signin.js" defer></script>
 </head>
 
 <body>
@@ -90,7 +91,18 @@
   </nav>
 
   <main>
-    <div class="modal"></div>
+    <div id="loader">
+      <div class="animation-wrapper">
+        <span class="ms-rounded refresh rotate">refresh</span>
+      </div>
+    </div>
+    
+    <div class="modal">
+      <span class="ms-rounded md-icon"></span>
+      <span class="md-title"></span>
+      <span class="md-body-content"></span>
+      <button class="md-cta"></button>
+    </div>
 
     <div class="hero">
       <div class="overlay">
@@ -108,7 +120,6 @@
   </main>
   
   <script src="js/main.js"></script>
-  <script src="js/signup.js"></script>
 </body>
 
 </html>
