--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <nav class="nav auto">
-    <div class="authForm-wrapper">
+    <div class="authForm-wrapper active">
       <form id="authForm">
         <label for="userEmail">
           <span class="ms-rounded">account_circle</span>
