--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
         </div>
       </div>
     </div>
+    
+    <div class="auth-content" hidden>
+      Auth content 
+    </div>
   </main>
   
   <script src="js/main.js"></script>
