--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
     </div>
     
     <div class="auth-content" hidden>
-      Auth content 
+      <div class="content-nav">
+        <div class="for-you cn-link">
+          <span>For you</span>
+        </div>
+      </div>
     </div>
   </main>
   
