--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
     </div>
     
-    <div class="auth-content" hidden>
+    <div class="auth-content">
       <div class="content-nav">
         <div class="for-you cn-link">
           <span>For you</span>
