--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     
     <div class="auth-content">
       <div class="content-nav">
-        <div class="for-you cn-link">
+        <div class="for-you cn-link active">
           <span>For you</span>
         </div>
       </div>
