--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
         <div class="for-you cn-link active">
           <span>For you</span>
         </div>
+        
+        <div class="favourites cn-link">
+          <span>Favorites</span>
+        </div>
       </div>
     </div>
   </main>
