--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <div class="site-id">
       <img src="img/Convo-logo.png" alt="Convo-logo">
-      <span id="userName">user</span>
+      <span id="userName">Convo</span>
     </div>
 
     <div class="nav-toggle">
