--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
           <span>Favorites</span>
         </div>
       </div>
+      
+      <div class="content-view">
+        
+      </div>
     </div>
   </main>
   
