--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <nav class="nav auto">
     <div class="authForm-wrapper active">
       <form id="authForm">
-        <label for="userEmail">
+        <label>
           <span class="ms-rounded">account_circle</span>
           <span>Sign In</span>
         </label>
