--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
   </main>
 
-  <script src="js/main.js"></script>
+  <script type="module" src="js/main.js" defer></script>
   <script src="js/posts.js"></script>
 </body>
 
