--- a/post.html
+++ b/post.html
@@ -60,7 +60,7 @@
   </main>
 
   <script type="module" src="js/posts.js" defer></script>
-  <script src="js/main.js"></script>
+  <script type="module" src="js/main.js" defer></script>
 </body>
 
 </html>
