--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <div class="content-view"></div>
+      <div class="posts-wrapper"></div>
     </div>
   </main>
 
