--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </main>
 
   <script type="module" src="js/main.js" defer></script>
-  <script src="js/posts.js"></script>
+  <script type="module" src="js/posts.js" defer></script>
 </body>
 
 </html>
