--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
         </div>
       </div>
 
-      <div class="posts-wrapper"></div>
+      <div class="posts-wrapper">
+        <h2>No posts available</h2> 
+      </div>
     </div>
   </main>
   
