--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
 
       <div class="posts-wrapper">
-        <h2>No posts available</h2> 
+        <h2 style="text-align: center;">No posts available</h2> 
       </div>
     </div>
   </main>
