--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <main>
     <div id="loader">
       <div class="animation-wrapper">
-        <span class="ms-rounded refresh">refresh</span>
+        <span class="ms-rounded refresh">progress_activity</span>
       </div>
     </div>
 
