--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
 
     <div class="auth-content">
       <div class="content-nav">
+        <a href="/post.html" class="write-post cnl-adaptive">
+          <span class="ms-rounded">edit</span>
+        </a>
+        
         <div class="for-you cn-link active">
           <span>For you</span>
         </div>
@@ -160,7 +164,7 @@
       </div>
 
       <div class="posts-wrapper">
-        <h3 style="text-align: center;">No posts available</h3> 
+        <h3 style="text-align: center; margin-top: 4rem;">Fetching posts...</h3> 
       </div>
     </div>
   </main>
