--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="site-id">
       <img src="img/Convo-logo.png" alt="Convo-logo">
-      <span id="userName">Convo</span>
+      <span id="userName"></span>
     </div>
 
     <div class="nav-toggle">
@@ -159,7 +159,7 @@
         </div>
 
         <div class="cn-link" data-tab="saved-posts">
-          <span>Favorites</span>
+          <span>Saved</span>
         </div>
       </div>
 
