--- a/post.html
+++ b/post.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="icons/icon.css" type="text/css" media="all" />
   <link rel="stylesheet" href="css/main.css" type="text/css" media="all" />
 
-  <title>postToConvo</title>
+  <title>Convo - Create a post</title>
 </head>
 
 <body>
