--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <header>
-    <div class="user-avatar">
+    <div class="user-avatar active">
       <img src="" alt="avatar">
     </div>
     
