--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="feed">
         <div class="content-nav">
           <div class="cn-icon">
-            <span class="ms-rounded">left_panel_open</span>
+            <span class="ms-rounded">switch_right</span>
           </div>
           
           <div class="cn-link active" data-tab="for-you-posts">
