--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container F404">
     <h1 class="error-code">404</h1>
     <p class="error-text">Sorry, the page you're looking for doesn't exist.</p>
     <a href="/" class="home-btn">Go Back Home</a>
