--- a/post.html
+++ b/post.html
@@ -23,7 +23,7 @@
           </div>
           
           <div class="input" style="flex-shrink: 0; min-width: 100px; max-width: 100px">
-            <input type="submit" value="Post">
+            <button class="send-post" type="submit">Post</button>
           </div>
         </label>
 
