--- a/await-verification.html
+++ b/await-verification.html
@@ -25,8 +25,8 @@
   
   <div class="container await-auth">
     <h1 class="await-text-title">Verify Email</h1>
-    <p class="await-text-body">Kindly open the link sent to your inbox to verify your email. Don't forget to check your spam folders as well</p>
-    <a href="/" class="inbox-btn">Check inbox</a>
+    <p class="await-text-body">Kindly open your mail app and click the link sent to your inbox to verify your email. Don't forget to check your spam folders as well</p>
+    <a href="/" class="inbox-btn">Back to Sign in</a>
   </div>
 </body>
 
