--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <div id="loader">
       <div class="animation-wrapper">
-        <span class="ms-rounded refresh">progress_activity</span>
+        <span class="ms-rounded refresh rotate">progress_activity</span>
       </div>
     </div>
   </main>
