--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </nav>
 
   <main>
-    <div class="hero">
+    <div class="hero await-auth">
       <div class="overlay">
         <span class="title">Your Personalized Feed of Whatever is Worth Digesting lol</span>
         <span class="body-content">
