--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </div>
     </div>
 
-    <div id="loader" class="active">
+    <div id="loader">
       <div class="animation-wrapper">
         <span class="ms-rounded refresh rotate">progress_activity</span>
       </div>
