--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         </div>
 
         <div class="input">
-          <button class="sign-in" type="submit">Sign in</button>
+          <button class="sign-in" type="submit">
+            <span>Sign In</span>
+            <span class="btn-loader"></span>
+          </button>
         </div>
 
         <div class="forgot-password" style="text-align: center;margin-top: 10px;">
@@ -81,7 +84,10 @@
         </div>
 
         <div class="input">
-          <button class="send-reset-link" type="submit">Send reset link</button>
+          <button class="send-reset-link" type="submit">
+            <span>Send link</span>
+            <span class="btn-loader"></span>
+          </button>
         </div>
 
         <div class="back-to-signin" style="text-align: center;margin-top: 10px;">
