--- a/post.html
+++ b/post.html
@@ -23,7 +23,10 @@
           </div>
           
           <div class="input" style="flex-shrink: 0; min-width: 100px; max-width: 100px">
-            <button class="send-post" type="submit">Post</button>
+            <button class="awaitable send-post" type="submit">
+              <span>Post</span>
+              <span class="btn-loader"></span>
+            </button>
           </div>
         </label>
 
