--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     <div id="loader" class="active">
       <div class="animation-wrapper">
-        <span class="ms-rounded refresh rotate">progress_activity</span>
+        <span class="page-loader"></span>
       </div>
     </div>
   </main>
