--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </div>
     </div>
 
-    <div class="content-nav">
+    <div class="content-nav hide">
       <div class="cn-link active" data-tab="for-you-posts">
         <span class="ms-rounded">for_you</span>
       </div>
