u index.html & main.css

--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
     </div>
 
     <div class="auth-content">
+      <div class="utility">
+        <div class="card user-menu">
+          <div class="nav-link cn-link">
+            <span class="ms-rounded">for_you</span>
+            <span style="width: 100%">For you</span>
+          </div>
+        </div>
+      </div>
+
       <div class="feed">
         <div class="posts-container">
           <div class="posts-wrapper for-you-posts active">
