--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 
           <a href="/post.html" class="edit-post">
             <span class="ms-rounded">edit</span>
+            <span>Post</span>
           </a>
           
           <!-- Account --->
