--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="auth-content">
       <div class="utility">
         <div class="card user-menu">
-          <div class="nav-link cn-link" data-tab="for-you-posts">
+          <div class="nav-link cn-link active" data-tab="for-you-posts">
             <span class="ms-rounded">for_you</span>
             <span style="width: 100%">For you</span>
           </div>
